--- a/configuration.properties
+++ b/configuration.properties
@@ -5,4 +5,5 @@ techproeducationUrl=https://www.techproeducation.com
 ebayUrl=https://www.ebay.com
 
 CHQAUrl=https://qa-environment.concorthotel.com/
+editorUrl=https://editor.datatables.net/
 
