--- a/configuration.properties
+++ b/configuration.properties
@@ -5,5 +5,9 @@ techproeducationUrl=https://www.techproeducation.com
 ebayUrl=https://www.ebay.com
 
 CHQAUrl=https://qa-environment.concorthotel.com/
+CHQAvalidUsername=manager
+CHQAValidPassword=Manager1!
+CHQAInvalidUsername=manager1
+CHQAInValidPassword=manage1!
 editorUrl=https://editor.datatables.net/
 
