--- a/configuration.properties
+++ b/configuration.properties
@@ -11,3 +11,10 @@ CHQAInvalidUsername=manager1
 CHQAInValidPassword=manage1!
 editorUrl=https://editor.datatables.net/
 
+gmi_login_url=https://gmibank.com/
+google_url=https://www.google.com
+amazon_url=https://www.amazon.com
+
+employee_username=gino.wintheiser
+employee_password=%B6B*q1!TH
+gmi_registration_url=https://www.gmibank.com/account/register
